<resources>
    <string name="app_name">Ayam Goreng</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">AYAM GORENG AYAMKU</string>
    <string name="backdrop_subtitle">Menu Ayam Goreng Terfavorit</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="selamat_datang2">Ini Ayam-Ku</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="action_callcenter">Call Center</string>
    <string name="sms_center">SMS Center</string>
    <string name="update_user">Update User Password</string>
    <string name="action_maps">Open Maps</string>
    <string name="google_mtv_coord_zoom12">geo:37.422114,-122.086744?z=12</string>
    <string name="desc_goreng">Ayam goreng ini enak sekali digoreng dengan tepung bercita rasa tinggi dan berkualitas enak sekali.</string>
    <string name="desc_bakar">Ayam Bakar yang di bakar dengan kecap nomor 1 asli buatan indonesia, atau kecap yang dikenal dengan nama malika.</string>
    <string name="desc_bbq">Ayam Goreng dengan bumbu BBQ ini yang langsung di import dari Oklahoma amerika yang membuat citarasa sedang berada di puncak Liberti</string>
    <string name="desc_kfc">Ayam goreng KFC yang sangat enak dengan 11 bumbu rahasia yang sudah banyak orang ketahui ini muantab rasanya</string>
    <string name="desc_lemon">Ayam Goreng dengan lumeran saus lemon langsung dari lemon yang di tanam di kuba ini membuat rasa berada di pangkuan fidel castro</string>
    <string name="desc_steak">Steak Ayam dengan rasa enak yang kita curi resepnya dari steak n shake ini akan membuat kalian merasa bersalah bahagia saat memakannya</string>
    <string name="action_logout">Logout</string>
</resources>
